--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <center>
         <h1>Layouts</h1>
-        <a href="">Layout 1</a>
-        <a href="">Layout 2</a>
+        <a href="https://aasisp.github.io/QUIMS/layout1">Layout 1</a>
+        <a href="https://aasisp.github.io/QUIMS/layout2">Layout 2</a>
     </center>
 </body>
 </html>
