--- a/layout1/index.html
+++ b/layout1/index.html
@@ -60,7 +60,7 @@
                                 </svg></i>
                             </div>
                             <div class="panel">
-                                <label for="rem-login"><input type="checkbox" name="rem-login">Remember me</label>
+                                <label for="remLogin"><input id="remLogin" type="checkbox" name="rem-login">Remember me</label>
                                 <a href="">Forget Passcode</a>
                             </div>
                             <button type="submit">Login</button>
