--- a/layout1/index.html
+++ b/layout1/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    
     <div id="app">
+        <div id="preloader">
+            <div class="logo">
+                <div class="white-bg"></div>
+                <img src="https://www.quantumuniversity.edu.in/images/qu_small.png" alt="Logo" />
+                <img src="image.png" alt="" />
+            </div>
+        </div>
         <header>
             <div class="logo">
                 <span class="logo-icon">
@@ -31,7 +39,7 @@
                                         </svg></a>
             </nav>
         </header>
-        <section>
+        <main>
             <div class="l-cont">
                 <div class="slider">
                     <div class="slides">
@@ -51,16 +59,16 @@
                     <div id="msg"><div class="error-msg"><span></span></div></div>
                     <div class="login-form">
                         <form method="post">
-                            <input type="text" name="userId" placeholder="Enter your Qid" required>
+                            <input type="text" name="userId" placeholder="Enter your Qid">
                             <div class="passcode-toggle">
-                                <input type="password" name="passcode" class="passcode-field" placeholder="Enter your passcode" required>
+                                <input type="password" name="passcode" class="passcode-field" placeholder="Enter your passcode">
                                 <i class="toggle-passcode"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#812972" class="bi bi-eye" viewBox="0 0 16 16">
                                     <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
                                     <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
                                 </svg></i>
                             </div>
                             <div class="panel">
-                                <label for="remLogin"><input id="remLogin" type="checkbox" name="rem-login">Remember me</label>
+                                <label for="rem-login"><input type="checkbox" name="rem-login">Remember me</label>
                                 <a href="">Forget Passcode</a>
                             </div>
                             <button type="submit">Login</button>
@@ -68,9 +76,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </main>
         <footer>
-            <div class="copyright">&copy; 2023 Quantum University. All rights reserved.</div>
+            <div class="copyright">&copy; 2024 Quantum University. All rights reserved.</div>
             <div class="social">
                 <span>Connect with us</span>
                 <span></span>
