--- a/layout1/index.html
+++ b/layout1/index.html
@@ -13,17 +13,17 @@
         <div id="preloader">
             <div class="logo">
                 <div class="white-bg"></div>
-                <img src="https://www.quantumuniversity.edu.in/images/qu_small.png" alt="Logo" />
-                <img src="image.png" alt="" />
+                <img src="./qu_small_logo.png" alt="QU Logo" />
+                <img src="./image.png" alt="Quantum University Logo" />
             </div>
         </div>
         <header>
             <div class="logo">
                 <span class="logo-icon">
-                    <img src="https://www.quantumuniversity.edu.in/images/qu_small.png">
+                    <img src="./qu_small_logo.png">
                 </span>
                 <span class="main-logo">
-                    <img src="https://www.quantumuniversity.edu.in/images/logo_header_01.png" >
+                    <img src="./qu_transpaprent.png" >
                 </span>
             </div>
             <nav>
